--- a/HTML/lesson12/index.html
+++ b/HTML/lesson12/index.html
@@ -28,6 +28,10 @@
             <div>item</div>
             <div>item</div>
         </div>
+        <div class="items1">sidebar
+         <div></div>
+        </div>
+       
 
     </main>
     <footer>
