--- a/HTML/lesson20/index.html
+++ b/HTML/lesson20/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Cardo:400i|Open+Sans:700|Raleway:400,600,700&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="gg.css">
+    <link rel="stylesheet" href="style.css">
     <title>ActiveBox</title>
 </head>
 
