--- a/HTML/eksperiment/norsayt1/index.html
+++ b/HTML/eksperiment/norsayt1/index.html
@@ -25,8 +25,30 @@
     <div class="intro">
         <div class="container">
             <div class="into__inner">
-                <h1 class="intro__title">Cozy Place</h1>
-                <h2 class="intro__subtitle">We are near the metro station (Zoravar Andranik) warm place in the center of Yerevan</h2>
+                <h1 class="intro__title">Welcome  to  Rooms</h1>
+                <h2 class="intro__subtitle anim-typewriter">Cozy Place</h2>
+                <h3 class="intro__subtitle anim-typewriter">We are near the metro station (Zoravar Andranik) warm place in the center of Yerevan</h3>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="features">
+            <div class="features__item">
+                <img class="features__icon" src="img/feature-1.png.png" alt="">
+                <h4 class="features__title">Wifi</h4>
+                <div class="features__text">interneti gumar@ mtnum e varci mej</div>
+            </div>
+
+            <div class="features__item">
+                <img class="features__icon" src="img/feature-2.png.png" alt="">
+                <h4 class="features__title">CCTV</h4>
+                <div class="features__text">interneti gumar@ mtnum e varci mej</div>
+            </div>
+            
+            <div class="features__item">
+                <img class="features__icon" src="img/feature-3.png.png" alt="">
+                <h4 class="features__title">Toilet</h4>
+                <div class="features__text">interneti gumar@ mtnum e varci mej</div>
             </div>
         </div>
     </div>
