--- a/HTML/eksperiment/norsayt1/index.html
+++ b/HTML/eksperiment/norsayt1/index.html
@@ -25,9 +25,10 @@
     <div class="intro">
         <div class="container">
             <div class="into__inner">
-                <h1 class="intro__title">Welcome  to  Rooms</h1>
-                <h2 class="intro__subtitle anim-typewriter">Cozy Place</h2>
-                <h3 class="intro__subtitle anim-typewriter">We are near the metro station (Zoravar Andranik) warm place in the center of Yerevan</h3>
+                <h1 class="intro__title">Բարի գալուստ Rooms</h1>
+                <h2 class="intro__subtitle anim-typewriter">Հարմարավետ վայր</h2>
+                <h3 class="intro__subtitle anim-typewriter">&#9758;Մետրոյի կայարանի մոտ ենք (Զորավար Անդրանիկ), լավ տեղ
+                    Երեւանի կենտրոնում&#128521;</h3>
             </div>
         </div>
     </div>
@@ -36,19 +37,38 @@
             <div class="features__item">
                 <img class="features__icon" src="img/feature-1.png.png" alt="">
                 <h4 class="features__title">Wifi</h4>
-                <div class="features__text">interneti gumar@ mtnum e varci mej</div>
+                <div class="features__text">Wifi արագ է եւ անվճար&#128582;</div>
             </div>
 
             <div class="features__item">
                 <img class="features__icon" src="img/feature-2.png.png" alt="">
                 <h4 class="features__title">CCTV</h4>
-                <div class="features__text">interneti gumar@ mtnum e varci mej</div>
+                <div class="features__text">Հոսթելի տարածքը տեսահսկվում է, ձեր իսկ ապահովության համար</div>
             </div>
-            
+
             <div class="features__item">
                 <img class="features__icon" src="img/feature-3.png.png" alt="">
-                <h4 class="features__title">Toilet</h4>
-                <div class="features__text">interneti gumar@ mtnum e varci mej</div>
+                <h4 class="features__title">Bathroom</h4>
+                <div class="features__text">Սանհանգույցը մաքուր է եւ կահավորած,կա մշտական տաք ջուր</div>
+            </div>
+
+            <div class="features__item">
+                <img class="features__icon" src="img/feature-4.png.png" alt="">
+                <h4 class="features__title">Kitchen</h4>
+                <div class="features__text">Գործում է 2 խոհանոց,բոլոր պարագաներով եւ սարքավորումներով</div>
+            </div>
+
+            <div class="features__item">
+                <img class="features__icon" src="img/feature-5.png.png" alt="">
+                <h4 class="features__title">People</h4>
+                <div class="features__text">Մթնոլորտը մեր մոտ շատ ջերմ է,մարդիկ բարի են</div>
+            </div>
+
+            <div class="features__item">
+                <img class="features__icon" src="img/feature-6.png.png" alt="">
+                <h4 class="features__title">Metro</h4>
+                <div class="features__text">Մետրոին մոտ է</div>
+
             </div>
         </div>
     </div>
