--- a/HTML/eksperiment/norsayt1/index.html
+++ b/HTML/eksperiment/norsayt1/index.html
@@ -73,6 +73,30 @@
         </div>
     </div>
 
+    <div class="works">
+        <div class="works__item">
+            <img class="works__photo" src="img/Works/work-1.jpeg.jpg" alt="">
+            <div class="works__content">
+                <div class="works__title">Project Name</div>
+                    <div class="works__text">User Interface Design</div>
+            </div>
+        </div>
+        <div class="works__item">
+            <img class="works__photo" src="img/Works/work-2.jpeg.jpg" alt="">
+            <div class="works__content">
+                <div class="works__title">Project Name</div>
+                    <div class="works__text">User Interface Design</div>
+            </div>
+        </div>
+        <div class="works__item">
+            <img class="works__photo" src="img/Works/work-3.jpeg.jpg" alt="">
+            <div class="works__content">
+                <div class="works__title">Project Name</div>
+                    <div class="works__text">User Interface Design</div>
+            </div>
+        </div>
+    </div>
+
 
 </body>
 
