--- a/HTML/eksperiment/norsayt1/index.html
+++ b/HTML/eksperiment/norsayt1/index.html
@@ -12,6 +12,19 @@
 
 <body>
 
+    <div class="foto">
+        <img src="img/bird.png.png" alt="">
+    </div>
+    <div class="foto1">
+        <img src="img/bird2.png.png" alt="">
+    </div>
+    <div class="foto2">
+        <img src="img/bird.png.png" alt="">
+    </div>
+    <div class="foto3">
+        <img src="img/bird2.png.png" alt="">
+    </div>
+
     <header class="header">
         <div class="container">
             <div class="header__inner">
@@ -78,24 +91,67 @@
             <img class="works__photo" src="img/Works/work-1.jpeg.jpg" alt="">
             <div class="works__content">
                 <div class="works__title">Project Name</div>
-                    <div class="works__text">User Interface Design</div>
+                <div class="works__text">User Interface Design</div>
             </div>
         </div>
         <div class="works__item">
             <img class="works__photo" src="img/Works/work-2.jpeg.jpg" alt="">
             <div class="works__content">
                 <div class="works__title">Project Name</div>
-                    <div class="works__text">User Interface Design</div>
+                <div class="works__text">User Interface Design</div>
             </div>
         </div>
         <div class="works__item">
             <img class="works__photo" src="img/Works/work-3.jpeg.jpg" alt="">
             <div class="works__content">
                 <div class="works__title">Project Name</div>
-                    <div class="works__text">User Interface Design</div>
+                <div class="works__text">User Interface Design</div>
+            </div>
+        </div>
+        <div class="works__item">
+            <img class="works__photo" src="img/Works/work-4.jpeg.jpg" alt="">
+            <div class="works__content">
+                <div class="works__title">Project Name</div>
+                <div class="works__text">User Interface Design</div>
+            </div>
+        </div>
+        <div class="works__item">
+            <img class="works__photo" src="img/Works/work-5.jpeg.jpg" alt="">
+            <div class="works__content">
+                <div class="works__title">Project Name</div>
+                <div class="works__text">User Interface Design</div>
+            </div>
+        </div>
+        <div class="works__item">
+            <img class="works__photo" src="img/Works/work-6.jpeg.jpg" alt="">
+            <div class="works__content">
+                <div class="works__title">Project Name</div>
+                <div class="works__text">User Interface Design</div>
+            </div>
+        </div>
+        <div class="works__item">
+            <img class="works__photo" src="img/Works/work-7.jpeg.jpg" alt="">
+            <div class="works__content">
+                <div class="works__title">Project Name</div>
+                <div class="works__text">User Interface Design</div>
+            </div>
+        </div>
+        <div class="works__item">
+            <img class="works__photo" src="img/Works/work-8.jpeg.jpg" alt="">
+            <div class="works__content">
+                <div class="works__title">Project Name</div>
+                <div class="works__text">User Interface Design</div>
+            </div>
+        </div>
+        <div class="works__item">
+            <img class="works__photo" src="img/Works/work-9.jpeg.jpg" alt="">
+            <div class="works__content">
+                <div class="works__title">Project Name</div>
+                <div class="works__text">User Interface Design</div>
             </div>
         </div>
     </div>
+
 
 
 </body>
