--- a/HTML/eksperiment/norsayt1/index.html
+++ b/HTML/eksperiment/norsayt1/index.html
@@ -193,6 +193,44 @@
             </div>
         </div>
     </div>
+    <div class="team">
+        <div class="container">
+            <div class="team__inner">
+                <div class="team__item">
+                    <img class="team__foto" src="img/team-1.png.png" alt="">
+                    <div class="team__name">Arsen Baghdasaryan</div>
+                    <div class="team__text">
+                        <p>fsdsfsfafdh dfhdfhdfhd hdhdhdhdhdh dhddhdh dhafasf afafa </p>
+                    </div>
+                    <div class="team__social"></div>
+                </div>
+                <div class="team__item">
+                    <img class="team__foto" src="img/team-1.png.png" alt="">
+                    <div class="team__name">Arsen Baghdasaryan</div>
+                    <div class="team__text">
+                        <p>fsdsfsfaf afadhdhdf hdhdfhdhdhdh dhdhdhd hdhdh dhdhsfafafa</p>
+                    </div>
+                    <div class="team__social"></div>
+                </div>
+                <div class="team__item">
+                    <img class="team__foto" src="img/team-1.png.png" alt="">
+                    <div class="team__name">Arsen Baghdasaryan</div>
+                    <div class="team__text">
+                        <p>fsdsfsffdhdf hdfhdfh dfhdfhdfhdf hdfhdfhdh dhdhdhd hdhdhaf afasfafafa</p>
+                    </div>
+                    <div class="team__social"></div>
+                </div>
+                <div class="team__item">
+                    <img class="team__foto" src="img/team-1.png.png" alt="">
+                    <div class="team__name">Arsen Baghdasaryan</div>
+                    <div class="team__text">
+                        <p>fsdsfsffdhdf hdfhdfh dfhdfhdfhdf hdfhdfhdh dhdhdhd hdhdhaf afasfafafa</p>
+                    </div>
+                    <div class="team__social"></div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
 
