--- a/HTML/eksperiment/norsayt1/index.html
+++ b/HTML/eksperiment/norsayt1/index.html
@@ -77,14 +77,14 @@
         <div class="works__item">
             <img class="works__photo" src="img/Works/work-1.jpeg.jpg" alt="">
             <div class="works__content">
-                <div class="works__title">Project Name</div>
+                <div class="works__title">Room 9</div>
                 <div class="works__text">User Interface Design</div>
             </div>
         </div>
         <div class="works__item">
             <img class="works__photo" src="img/Works/work-2.jpeg.jpg" alt="">
             <div class="works__content">
-                <div class="works__title">Project Name</div>
+                <div class="works__title">Room 8</div>
                 <div class="works__text">User Interface Design</div>
             </div>
         </div>
@@ -189,31 +189,35 @@
                     <div class="team__text">
                         <p>fsdsfsfafdh dfhdfhdfhd hdhdhdhdhdh dhddhdh dhafasf afafa </p>
                     </div>
-                    <div class="team__social"></div>
                 </div>
-                <div class="team__item">
-                    <img class="team__foto" src="img/team-1.png.png" alt="">
-                    <div class="team__name">Arsen Baghdasaryan</div>
-                    <div class="team__text">
-                        <p>fsdsfsfaf afadhdhdf hdhdfhdhdhdh dhdhdhd hdhdh dhdhsfafafa</p>
-                    </div>
-                    <div class="team__social"></div>
+            <div class="team__item">
+                <img class="team__foto" src="img/team-1.png.png" alt="">
+                <div class="team__name">Arsen Baghdasaryan</div>
+                <div class="team__text">
+                    <p>fsdsfsfaf afadhdhdf hdhdfhdhdhdh dhdhdhd hdhdh dhdhsfafafa</p>
                 </div>
-                <div class="team__item">
-                    <img class="team__foto" src="img/team-1.png.png" alt="">
-                    <div class="team__name">Arsen Baghdasaryan</div>
-                    <div class="team__text">
-                        <p>fsdsfsffdhdf hdfhdfh dfhdfhdfhdf hdfhdfhdh dhdhdhd hdhdhaf afasfafafa</p>
-                    </div>
-                    <div class="team__social"></div>
+            </div>
+            <div class="team__item">
+                <img class="team__foto" src="img/team-1.png.png" alt="">
+                <div class="team__name">Arsen Baghdasaryan</div>
+                <div class="team__text">
+                    <p>fsdsfsffdhdf hdfhdfh dfhdfhdfhdf hdfhdfhdh dhdhdhd hdhdhaf afasfafafa</p>
                 </div>
-                <div class="team__item">
-                    <img class="team__foto" src="img/team-1.png.png" alt="">
-                    <div class="team__name">Arsen Baghdasaryan</div>
-                    <div class="team__text">
-                        <p>fsdsfsffdhdf hdfhdfh dfhdfhdfhdf hdfhdfhdh dhdhdhd hdhdhaf afasfafafa</p>
-                    </div>
-                    <div class="team__social"></div>
+            </div>
+            <div class="team__item">
+                <img class="team__foto" src="img/team-1.png.png" alt="">
+                <div class="team__name">Arsen Baghdasaryan</div>
+                <div class="team__text">
+                    <p>fsdsfsffdhdf hdfhdfh dfhdfhdfhdf hdfhdfhdh dhdhdhd hdhdhaf afasfafafa</p>
+                </div>
+                <div class="social">
+                    <a class="social__item" href="#">
+                        <img src="img/facebook-1.png.svg" height="50" alt="">
+                    </a>
+                <div class="social">
+                    <a class="social__item" href="#">
+                        <img src="img/facebook-1.png.svg" height="50" alt="">
+                    </a>
                 </div>
             </div>
         </div>
