--- a/HTML/eksperiment/norsayt1/index.html
+++ b/HTML/eksperiment/norsayt1/index.html
@@ -105,7 +105,7 @@
         <div class="works__item">
             <img class="works__photo" src="img/Works/work-5.jpeg.jpg" alt="">
             <div class="works__content">
-                <div class="works__title">Project Name</div>
+                <div class="works__title">Kitchen</div>
                 <div class="works__text">User Interface Design</div>
             </div>
         </div>
