--- a/HTML/eksperiment/norsayt2/index.html
+++ b/HTML/eksperiment/norsayt2/index.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:500,700,800,900&display=swap&subset=cyrillic-ext"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:500,700,800,900&display=swap&subset=cyrillic-ext" rel="stylesheet">
     <title>Document</title>
 </head>
 
@@ -36,6 +35,20 @@
                     </li>
                 </ul>
             </nav>
+
+            <div class="header-content">
+                <div class="header-desc">
+
+                    <h1 class="header__titlr"> Натуральные Соки</h1>
+
+                    <div class="header__text">
+                        <p>Сок является одним из самых целебных напитков, дарит энергию и заряжает витаминами. Стакан сока в день и ты готов свернуть горы.</p>
+                    </div>
+                    <a href="#" class="header__btn">Получить заряд</a>
+
+                </div>
+                <div class="header-photo"></div>
+            </div>
         </div>
 
     </header>
