--- a/HTML/eksperiment/norsayt2/index.html
+++ b/HTML/eksperiment/norsayt2/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:500,700,800,900&display=swap&subset=cyrillic-ext" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css">
     <title>Document</title>
 </head>
 
@@ -47,8 +48,30 @@
                     <a href="#" class="header__btn">Получить заряд</a>
 
                 </div>
-                <div class="header-photo"></div>
+                <div class="header-photo">
+                    <img src="img/drink.png" alt="">
+                </div>
             </div>
+
+            <div class="header__social">
+                <a class="header__social-item" href="#">
+
+                    <i class="fab fa-facebook-f"></i>
+                </a>
+                <a class="header__social-item" href="#">
+
+                    <i class="fab fa-instagram"></i>
+                </a>
+                <a class="header__social-item" href="#">
+
+                    <i class="fab fa-twitter"></i>
+                </a>
+                <a class="header__social-item" href="#">
+
+                    <i class="fab fa-vk"></i>
+                </a>
+            </div>
+
         </div>
 
     </header>
