--- a/HTML/eksperiment/Slayder/index.html
+++ b/HTML/eksperiment/Slayder/index.html
@@ -17,10 +17,10 @@
             <input type="radio" name="r" id="r3">
             <input type="radio" name="r" id="r4">
 
-            <div class="slide"><img src="" alt=""></div>
-            <div class="slide"><img src="" alt=""></div>
-            <div class="slide"><img src="" alt=""></div>
-            <div class="slide"><img src="" alt=""></div>
+            <div class="slide s1"><img src="img/Chrysanthemum.jpg" alt=""></div>
+            <div class="slide"><img src="img/Desert.jpg" alt=""></div>
+            <div class="slide"><img src="img/Hydrangeas.jpg" alt=""></div>
+            <div class="slide"><img src="img/Jellyfish.jpg" alt=""></div>
         </div>
         <div class="navigation">
             <label for="r1" class="bar"></label>
@@ -29,7 +29,6 @@
             <label for="r4" class="bar"></label>
         </div>
     </div>
-
 
 </body>
 
