--- a/HTML/eksperiment/Slayder/index.html
+++ b/HTML/eksperiment/Slayder/index.html
@@ -17,7 +17,7 @@
             <input type="radio" name="r" id="r3">
             <input type="radio" name="r" id="r4">
 
-            <div class="slide s1"><img src="img/Chrysanthemum.jpg" alt=""></div>
+            <div class="slide s1"><img src="img/kanada.jpg" alt=""></div>
             <div class="slide"><img src="img/Desert.jpg" alt=""></div>
             <div class="slide"><img src="img/Hydrangeas.jpg" alt=""></div>
             <div class="slide"><img src="img/Jellyfish.jpg" alt=""></div>
