--- a/HTML/eksperiment/norsayt1/index.html
+++ b/HTML/eksperiment/norsayt1/index.html
@@ -147,7 +147,7 @@
         <div class="works__item">
             <img class="works__photo" src="img/Works/work-11.jpeg.jpg" alt="">
             <div class="works__content">
-                <div class="works__title">Project Name</div>
+                <div class="works__title">Kitchen</div>
                 <div class="works__text">User Interface Design</div>
             </div>
         </div>
@@ -185,16 +185,18 @@
             <div class="team__inner">
                 <div class="team__item">
                     <img class="team__foto" src="img/team-1.png.png" alt="">
-                    <div class="team__name">Arsen Baghdasaryan</div>
+                    <div class="team__name">Մեր մասին</div>
                     <div class="team__text">
-                        <p>fsdsfsfafdh dfhdfhdfhd hdhdhdhdhdh dhddhdh dhafasf afafa </p>
+                        <p>Հասցե՝ Խորենացի 30/72</p>
+                        <p>Հեռախոսահամար՝  (+374) 77 339 277</p>
+                        
                     </div>
                 </div>
             <div class="team__item">
                 <img class="team__foto" src="img/team-1.png.png" alt="">
                 <div class="team__name">Arsen Baghdasaryan</div>
                 <div class="team__text">
-                    <p>fsdsfsfaf afadhdhdf hdhdfhdhdhdh dhdhdhd hdhdh dhdhsfafafa</p>
+                    <p>Հասցե՝ Խորենացի 30/72</p>
                 </div>
             </div>
             <div class="team__item">
@@ -216,7 +218,15 @@
                     </a>
                 <div class="social">
                     <a class="social__item" href="#">
-                        <img src="img/facebook-1.png.svg" height="50" alt="">
+                        <img src="img/instagram-2.png.svg" height="50" alt="">
+                    </a>
+                <div class="social">
+                    <a class="social__item" href="#">
+                        <img src="img/viber-3.png.svg" height="50" alt="">
+                    </a>
+                <div class="social">
+                    <a class="social__item" href="#">
+                        <img src="img/whatsapp-4.png.svg" height="50" alt="">
                     </a>
                 </div>
             </div>
