--- a/HTML/eksperiment/norsayt1/index.html
+++ b/HTML/eksperiment/norsayt1/index.html
@@ -194,21 +194,21 @@
                 </div>
             <div class="team__item">
                 <img class="team__foto" src="img/team-1.png.png" alt="">
-                <div class="team__name">Arsen Baghdasaryan</div>
+                <div class="team__name">dfgdg</div>
                 <div class="team__text">
                     <p>Հասցե՝ Խորենացի 30/72</p>
                 </div>
             </div>
             <div class="team__item">
                 <img class="team__foto" src="img/team-1.png.png" alt="">
-                <div class="team__name">Arsen Baghdasaryan</div>
+                <div class="team__name">dfgdfg</div>
                 <div class="team__text">
                     <p>fsdsfsffdhdf hdfhdfh dfhdfhdfhdf hdfhdfhdh dhdhdhd hdhdhaf afasfafafa</p>
                 </div>
             </div>
             <div class="team__item">
                 <img class="team__foto" src="img/team-1.png.png" alt="">
-                <div class="team__name">Arsen Baghdasaryan</div>
+                <div class="team__name">sdfdsfs</div>
                 <div class="team__text">
                     <p>fsdsfsffdhdf hdfhdfh dfhdfhdfhdf hdfhdfhdh dhdhdhd hdhdhaf afasfafafa</p>
                 </div>
