--- a/Javascript/lesson1/index.html
+++ b/Javascript/lesson1/index.html
@@ -3,13 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-    <script>
-        alert(5+5+6)
-    </script>
-
-
+    <script src="index.js"></script>
 </body>
 </html>
