--- a/Javascript/12/index.html
+++ b/Javascript/12/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 ​
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,13 +9,14 @@
     <title>Document</title>
 </head>
 ​
+
 <body>
 
     <header class="header">
         <div class="container">
             <div class="header__inner">
                 <div class="header__logo">
-                   <p>&#9917;WELCOME&#9917;</p>
+                    <p>&#9917;WELCOME&#9917;</p>
                 </div>
             </div>
         </div>
@@ -24,40 +26,42 @@
 
 
 
-<div class="blok1"><img class="images" src="img/barcelona.png" alt="">
-    <div>
-        <span>Score </span><span id="score-text">0</span>
-    </div>
-    <div>
-        <span>Accept </span><span id="accept-text">0</span>
-    </div>
-​
-    <button id="score">Add score</button>
-    <button id="accept">Accept golse</button>
-    <button id="reset">Reset</button>
-​
-    
-​</div>
-   
+    <div class="blok1"><img class="images" src="img/barcelona.png" alt="">
+        <div>
+            <span>Score </span><span id="score-text">0</span>
+        </div>
+        <div>
+            <span>Accept </span><span id="accept-text">0</span>
+        </div>
+        ​
+        <button id="score">Add score</button>
+        <button id="accept">Accept golse</button>
+        <button id="reset">Reset</button>
+        ​
 
+        ​
+    </div>
 
-<div class="blok2"><img class="images" src="img/real-madrid (1).png" alt="">
-     <div>
-        <span>Score </span><span id="score-text1">0</span>
+    <div class="blok2"><img class="images" src="img/real-madrid (1).png" alt="">
+        <div>
+            <span>Score </span><span id="score-text1">0</span>
+        </div>
+        <div>
+            <span>Accept </span><span id="accept-text1">0</span>
+        </div>
+        <button id="score1">Add score</button>
+        <button id="accept1">Accept golse</button>
+        <button id="reset1">Reset</button>
+        ​
     </div>
-    <div>
-        <span>Accept </span><span id="accept-text1">0</span>
-    </div>
-    <button id="score1">Add score</button>
-    <button id="accept1">Accept golse</button>
-    <button id="reset1">Reset</button>
-    ​ </div>
-    ​
     <div class="blok3"><img class="images1" src="img/versus.png" alt=""></div>
-   
-​
-    <script src="index.js"></script> 
-    
+    <div class="blok4"><progress max="100" value="10" id="progress"></progress></div>
+     <div class="blok5"><img class="images2" src="img/Lionel_Messi_20180626.jpg" alt=""></div>
+     <div class="blok6"><img class="images3" src="img/52e3b046-ff66-45dd-9497-d2b88b8acc31.jpg" alt=""></div>
+     <div class="blok7"><img class="images4" src="img/battle.png" alt=""></div>
+    <script src="index.js"></script>
+
 </body>
 ​
+
 </html>
