--- a/Javascript/Tan@ nor das/index.html
+++ b/Javascript/Tan@ nor das/index.html
@@ -26,7 +26,7 @@
             
         </section>
 
-        <section class="section  section--gray">
+        <section class="section">
             <h2 class="section__title">Russia</h2>
             <img class="photo" src="img/Russia.jpg" alt="">
         </section>
